--- a/index.html
+++ b/index.html
@@ -2,60 +2,155 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ArinBot Official - WhatsApp Bot</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Dashboard ArinBot Official - WhatsApp Bot</title>
+  <!-- Link to Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css" integrity="sha512-ZnvB30f87B9ZBLnFcx92NQ8sYRbN/7ePwOpw/3tq3lEtAaXZlNExKTzRE7g8jvYB1yGeLiqjsHzwzm7rs8eTFQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">ArinBot Official</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Halaman Utama <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Tentang Kami</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Kontak</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://saweria.co/arintest">Donasi</a>
-      </li>
-    </ul>
-  </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">ArinBot Official</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <!-- <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Dashboard</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Settings</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Logout</a>
+          </li> -->
+        </ul>
+      </div>
+    </div>
   </nav>
 
-  <div class="container my-5">
+  <!-- Main Content -->
+  <div class="container-fluid mt-3">
     <div class="row">
-      <div class="col-lg-8">
-        <h1 class="mb-4">Apa Itu Bot?</h1>
-        <p>Bot adalah program komputer yang dirancang untuk melakukan tugas tertentu secara otomatis. Dalam konteks WhatsApp, bot dapat digunakan untuk mempermudah interaksi dengan pengguna dalam mengakses informasi, melakukan pemesanan, atau bahkan sebagai asisten pribadi.</p>
-        <h2 class="mt-5">Bagaimana Bot bisa berjalan dengan bantuan Github dan Railway?</h2>
-        <p>Untuk menjalankan bot pada platform WhatsApp, diperlukan beberapa tahapan seperti membuat API key, mengatur webhook, dan mengatur pengaturan lainnya. Dengan menggunakan layanan seperti Github dan Railway, pengguna dapat memudahkan proses pembuatan dan hosting bot dengan mengikuti panduan dan memanfaatkan fitur yang disediakan.</p>
-        <button class="btn btn-primary mt-4" onclick="window.open('https://github.com/new/import')">Upload Folder to Github</button>
+      <div class="col-md-12">
+        <!-- Content -->
+        <div class="card">
+          <div class="card-header">
+            Dashboard
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Welcome to ArinBot Official Dashboard!</h5>
+            <p class="card-text">Here you can manage your WhatsApp bot and interact with your users.</p>
+            <a href="#" class="btn btn-primary">Get Started</a>
+          </div>
+        </div>
       </div>
-      <div class="col-lg-4">
-        <h1 class="mb-4">Sewa Bot</h1>
-        <p>Anda dapat menyewa bot kami untuk membantu mempermudah interaksi dengan pengguna Anda pada platform WhatsApp. Kami menyediakan sewa bot dalam berbagai pilihan waktu, mulai dari perhari, perminggu, perbulan, hingga pertahun.</p>
-        <p>Sewa bot kami dapat membantu Anda menghemat waktu dan biaya dalam mengembangkan dan menjalankan bot sendiri. Kami juga menjamin keamanan data dan privasi pengguna Anda.</p>
-        <button class="btn btn-primary mt-4">Sewa Bot</button>
+    </div>
+    <!-- Subscription -->
+    <div class="row mt-3">
+      <!-- Free Subscription -->
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">
+            24 Hours
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">0 IDR</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                Add Bot To Group WhatsApp <i class="bi bi-check text-success"></i>
+              </li>
+              <li class="list-group-item">
+                Unlock All Feature <i class="bi bi-check text-success"></i>
+              </li>
+              <li class="list-group-item">
+                Response Speed<i class="bi bi-x text-danger"></i>
+              </li>
+            </ul>
+            <div class="d-grid mt-3">
+          <a href="#" class="btn btn-primary">Get Started</a>
+          </div>
+        </div>
+      </div>
+      <!-- Weekly Subscription -->
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-header">
+            1 Week
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">5.000 IDR</h5>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                Add Bot To Group WhatsApp <i class="bi bi-check text-sucxess"></i>
+          <li class="list-group-item">
+            Unlock All Feature <i class="bi bi-check text-success"></i>
+          </li>
+          <li class="list-group-item">
+            Response Speed <i class="bi bi-check text-success"></i>
+          </li>
+        </ul>
+        <div class="d-grid mt-3">
+          <a href="#" class="btn btn-primary">Get Started</a>
+        </div>
       </div>
     </div>
   </div>
-
-  <footer class="bg-light py-3">
-    <div class="container">
-      <p class="text-center mb-0">&copy; 2023 ArinBot Official. All rights reserved.</p>
+  <!-- Monthly Subscription -->
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-header">
+        1 Month (Save 50%)
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">20.000 IDR</h5>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            Add Bot To Group WhatsApp <i class="bi bi-check text-success"></i>
+          </li>
+          <li class="list-group-item">
+            Unlock All Feature <i class="bi bi-check text-success"></i>
+          </li>
+          <li class="list-group-item">
+            Response Speed <i class="bi bi-check text-success"></i>
+          </li>
+        </ul>
+        <div class="d-grid mt-3">
+          <a href="#" class="btn btn-primary">Get Started</a>
+        </div>
+      </div>
     </div>
-  </footer>
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNSliNQ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
-</html>
+  </div>
+</div>
+<!-- Yearly Subscription -->
+<div class="row mt-3">
+  <div class="col-md-4 offset-md-4">
+    <div class="card">
+      <div class="card-header">
+        1 Year (Save 80%)
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">120.000 IDR</h5>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            Add Bot To Group WhatsApp <i class="bi bi-check text-success"></i>
+          </li>
+          <li class="list-group-item">
+            Unlock All Feature <i class="bi bi-check text-success"></i>
+          </li>
+          <li class="list-group-item">
+            Response Speed <i class="bi bi-check text-success"></i>
+          </li>
+        </ul>
+        <div class="d-grid mt-3">
+          <a href="#" class="btn btn-primary">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
